--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "axios": "^0.21.1",
+    "date-fns": "^2.23.0",
     "expo": "~45.0.0",
+    "expo-constants": "~13.1.1",
+    "expo-location": "~14.2.2",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-paper": "4.9.2",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
